Fix Power-up tag bar alignment

--- a/SCSS/Rem Thumbnail.scss
+++ b/SCSS/Rem Thumbnail.scss
@@ -264,6 +264,9 @@
 
 			@include thumbnail-set(3px);
 		}
+		.py-\[2px\] {
+			display: flex;
+		}
 	}
 // Search Result
 	// Global Search Result (⌘+P Window)
